Bug 1833695 - Reset DeclContext stack when analysing out-of-line templated function. r=asuth

Without this, OutOfLineTemplateShouldntHaveContextSym had two
definition target records that disagreed on the contextsym:
1. The first one was generated when traversing the declaration, because
   it forwards to the definition if out-of-line (see comment in
   TraverseFunctionDecl).
   We didn't reset CurDeclContext, so it looked as-if the definition
   appeared inside the declaration, leading to a bogus contextsym
   (pointing to the function itself).
2. The second one was generated later on when traversing the definition
   itself. This one had a correct contextsym (ie. none).

This introduces a ValueRollback helper to make sure we don't forget to
rollback CurDeclContext afterwards. (inspired by QScopedValueRollback)

See https://github.com/mozsearch/mozsearch/pull/820

Differential Revision: https://phabricator.services.mozilla.com/D224609